# octopize-linkage

./: .gitignore  LICENSE  Notes.md  README.md  analyze_many_linkage.py  analyze_many_linkage_afi.py  analyze_many_pipelines.py  anonymize_afi.py  anonymize_pra.py  data_loader.py  default.nix  experiments.md  future_work.md  linkage.py  linkage_test.py  post_linkage_metrics.py  pre_linkage_metrics.py  pre_linkage_metrics_test.py  pyproject.toml  run_many_linkage.py  run_many_linkage_afi.py  run_many_pipelines.py  run_many_sizes.py  run_use_case_pra.py
data/: .gitignore  Readme.md  _targets.R  default.nix  many_pipeline_stats_20241120_170813.csv  many_sizes_stats_20241121_144048.csv  pra_2023.csv  pra_A.csv  pra_A_avatars.csv  pra_B.csv  pra_B_avatars.csv  students_dropout.csv
data/Microdatos_PRA_2019_2024/: DATA DESCRIPTION - EUSTAT metadata microdatos_i.xlsx
data/Microdatos_PRA_2019_2024/Microdatos_PRA_2019_2024/Microdatos_PRA_2023/: MICRO_PRA_2023_1.csv  MICRO_PRA_2023_2.csv  MICRO_PRA_2023_3.csv  MICRO_PRA_2023_4.csv
docs/: _quarto.yml  anonymization_privacy.md  custom-reference-doc.docx  experiments.md  future_work.md  index.md  index.qmd  intro.md  linkage_methods.md  postlinkage_metrics.md  prelinkage_metrics.md  readme.md
